added a few things

--- a/starter_code/select_fun/css/style.css
+++ b/starter_code/select_fun/css/style.css
@@ -209,5 +209,7 @@ button {
 /* Your CSS goes here!
    ================================================================ */
 .fun {
+  background-color: #ffd800;
+  color: #6AF5E3
   /* Add your styles here! background-color and color for fonts (and other styles if you'd like!) */
 }
